# Compiler

./: README.en.md  README.md
Compiler/: CMakeLists.txt  Makefile  README.md  final_test_report.txt  report.md
Compiler/FINALREPORTtests/: README.md
Compiler/lib/: CMakeLists.txt
Compiler/scripts/: final_test.sh  normalize_quad.py  run_tests.py  setup_test.sh  sync_sources.sh  test_manifest.json  verify_e2e.py  verify_e2e.sh  verify_ir.sh  verify_quads.sh
Compiler/test/: bubblesort.4-ssa-allloop.quad  bubblesort.4-ssa-allopt.quad  bubblesort.4-ssa-loopivopt.quad  bubblesort.4-ssa-loopopt.quad  bubblesort.4-ssa-opt.quad  bubblesort.5-xml.asm  bubblesort.allloop.5-xml.asm  bubblesort.allloop.s  bubblesort.allopt.5-xml.asm  bubblesort.allopt.s  bubblesort.base.5-xml.asm  bubblesort.base.s  bubblesort.const.5-xml.asm  bubblesort.const.s  bubblesort.fmj  bubblesort.loop1.5-xml.asm  bubblesort.loop1.s  bubblesort.loop2.5-xml.asm  bubblesort.loop2.colored.s  bubblesort.loop2.s  bubblesort.reflow-allloop.4-ssa-withflow-xml.quad  bubblesort.reflow-allloop.4-ssa-xml.quad  bubblesort.reflow-allopt.4-ssa-withflow-xml.quad  bubblesort.reflow-allopt.4-ssa-xml.quad  bubblesort.reflow-const.4-ssa-withflow-xml.quad  bubblesort.reflow-const.4-ssa-xml.quad  bubblesort.reflow-loop1.4-ssa-withflow-xml.quad  bubblesort.reflow-loop1.4-ssa-xml.quad  bubblesort.reflow-loop2.4-ssa-withflow-xml.quad  bubblesort.reflow-loop2.4-ssa-xml.quad  bubblesort.src  fibonacci.4-ssa-allloop.quad  fibonacci.4-ssa-allopt.quad  fibonacci.4-ssa-loopivopt.quad  (+1206 more)
HW12/: CMakeLists.txt  Makefile  README.md
(+6444 files in other folders)
